<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/brouser" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="@android:drawable/stat_notify_more"
            android:title="@string/calculate" />

        <item
            android:id="@+id/nav_musicPlayer"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/music_player" />

        <item
            android:id="@+id/nav_datchic"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/datchic" />

        <item
            android:id="@+id/nav_photo"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/photo" />

        </group>
</menu>